--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LeaderBoard</title>
 </head>
+
 <body>
-    <h1>Leaderboard</h1>
+    <h1 id="page-title">Leaderboard</h1>
+    <section>
+        <div class="score-section">
+            <div class="score-section-header">
+                <h2 id="score-title">Recent scores</h2>
+                <button type="button">Refresh</button>
+            </div>
+            <div class="ranks">
+                <p class="player">Hammas : 100</p>
+                <p class="player">Jihane : 500</p>
+                <p class="player">Tresor : 400</p>
+            </div>
+        </div>
+        <form id="form">
+            <h3>Add your score</h3>
+            <input type="text" placeholder="Your Name" id="name" class="name-score">
+            <input type="text" placeholder="Your Score" id="score" class="name-score">
+            <button type="submit" id="submit">submit</button>
+        </form>
+    </section>
 </body>
+
 </html>
