--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,14 @@
                 <button type="button">Refresh</button>
             </div>
             <div class="ranks">
-                <p class="player">Hammas : 100</p>
-                <p class="player">Jihane : 500</p>
-                <p class="player">Tresor : 400</p>
+                <!-- Player Ranks -->
             </div>
         </div>
         <form id="form">
             <h3>Add your score</h3>
             <input type="text" placeholder="Your Name" id="name" class="name-score">
             <input type="text" placeholder="Your Score" id="score" class="name-score">
-            <button type="submit" id="submit">submit</button>
+            <button type="submit" id="submit">Submit</button>
         </form>
     </section>
 </body>
