--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <form id="form">
-            <h3>Add your score</h3>
+            <h3 class="form-title">Add your score</h3>
             <input type="text" placeholder="Your Name" id="name" class="name-score">
             <input type="text" placeholder="Your Score" id="score" class="name-score">
             <button type="submit" id="submit">Submit</button>
