Get data from api

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div class="score-section">
             <div class="score-section-header">
                 <h2 id="score-title">Recent scores</h2>
-                <button type="button">Refresh</button>
+                <button type="button" id="refresh">Refresh</button>
             </div>
             <div class="ranks">
                 <!-- Player Ranks -->
