--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+      src="https://kit.fontawesome.com/fe6dec7cca.js"
+      crossorigin="anonymous"
+    ></script>
     <title>LeaderBoard</title>
 </head>
 
 <body>
-    <h1 id="page-title">Leaderboard</h1>
+    <header>
+        <h1 id="page-title">Leaderboard</h1>
+    </header>
     <section>
+        <div class="top-ranks">
+            <div class="rank-second top-ranks-person">
+                <p class="position pos-not-first">2nd</p>
+                <i class="fas fa-user-alt fa-4x"></i>
+                <p class="name">Hammas</p>
+                <p class="score">300</p>
+            </div>
+            <div class="rank-first top-ranks-person">
+                <p class="position">1st</p>
+                <i class="fas fa-crown fa-2x"></i>
+                <i class="fas fa-user-alt fa-6x"></i>
+                <p class="name">Hammas</p>
+                <p class="score">300</p>
+            </div>
+            <div class="rank-third top-ranks-person">
+                <p class="position pos-not-first">3rd</p>
+                <i class="fas fa-user-alt fa-4x"></i>
+                <p class="name">Hammas</p>
+                <p class="score">300</p>
+            </div>
+        </div>
         <div class="score-section">
             <div class="score-section-header">
                 <h2 id="score-title">Recent scores</h2>
