Update script for showRanks.js

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
                 <p class="score">300</p>
             </div>
         </div>
+        <div class="for-fullscreen">
         <div class="score-section">
             <div class="score-section-header">
                 <h2 id="score-title">Recent scores</h2>
@@ -53,6 +54,7 @@
             <input type="text" placeholder="Your Score" id="score" class="name-score">
             <button type="submit" id="submit">Submit</button>
         </form>
+    </div>
     </section>
 </body>
 
