--- a/src/index.html
+++ b/src/index.html
@@ -21,21 +21,21 @@
             <div class="rank-second top-ranks-person">
                 <p class="position pos-not-first">2nd</p>
                 <i class="fas fa-user-alt fa-4x"></i>
-                <p class="name">Hammas</p>
-                <p class="score">300</p>
+                <p class="name second-person">Hammas</p>
+                <p class="score second-score">300</p>
             </div>
             <div class="rank-first top-ranks-person">
                 <p class="position">1st</p>
                 <i class="fas fa-crown fa-2x"></i>
                 <i class="fas fa-user-alt fa-6x"></i>
-                <p class="name">Hammas</p>
-                <p class="score">300</p>
+                <p class="name first-person">Hammas</p>
+                <p class="score first-score">300</p>
             </div>
             <div class="rank-third top-ranks-person">
                 <p class="position pos-not-first">3rd</p>
                 <i class="fas fa-user-alt fa-4x"></i>
-                <p class="name">Hammas</p>
-                <p class="score">300</p>
+                <p class="name third-person">Hammas</p>
+                <p class="score third-score">300</p>
             </div>
         </div>
         <div class="for-fullscreen">
